results/SVCOMP/specgen/log-startswith-2024_02_29_18_03_29.txt
public class startswith {
    //@ requires request != null;
    //@ requires request.length() <= Integer.MAX_VALUE;
    //@ ensures \result == true || \result == false;
    public boolean doPost(String request) throws IOException {
        String param = request;

        String[] argsEnv = {param};

        //@ assert param != null;
        //@ assert argsEnv.length == 1;
        //@ assert argsEnv[0] != null;
        //@ assert argsEnv[0].equals(param);
        //@ assert argsEnv[0].length() == param.length();

        if (param.equals("") && argsEnv[0].equals("GOTCHA")) {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/startswith.java:5: error: cannot find symbol
    public boolean doPost(String request) throws IOException {
                                                 ^
  symbol:   class IOException
  location: class startswith
1 error

public class startswith {
    //@ requires request != null;
    //@ requires request.length() <= Integer.MAX_VALUE;
    //@ ensures \result == true || \result == false;
    public boolean doPost(String request) {
        String param = request;

        String[] argsEnv = {param};

        //@ assert param != null;
        //@ assert argsEnv.length == 1;
        //@ assert argsEnv[0] != null;
        //@ assert argsEnv[0].equals(param);
        //@ assert argsEnv[0].length() == param.length();

        if (param.equals("") && argsEnv[0].equals("GOTCHA")) {
            return false;
        }
        return true;
    }
}

